--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ body {
 #submit, #cancel {
     flex: 1;
     display: flex;
-    width: 100px;
     justify-content: center;
     border-style: hidden;
     border-radius: 5px;
+    padding: 5px 0;
 }
 
 #submit {
@@ -73,18 +73,16 @@ body {
 
 .form {
     width: 200px;
-    border-style: solid;
-    border-width: thin;
+    border-style: none;
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    opacity: 0.5;
     margin-bottom: 20px;
 }
 
-.form:hover {opacity: 1}
 
 .radio {
     display: flex;
@@ -141,4 +139,27 @@ body {
 .footer a {
     text-decoration: none;
     color: grey;
+}
+
+
+input {
+    padding: 5px;
+}
+
+
+input:invalid {
+    border-color: red;
+    border-width: 1px;
+    background-color: rgba(255, 0, 0, 0.2);
+}
+
+
+span.error {
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
+    color: white;
+    background-color:  rgba(255, 0, 0, 0.5);
+    padding: 0 5px;
+    border-radius: 5px;
 }
